# neuronGM

./: .gitignore  CITATION.cff  Dockerfile  Makefile.am  Makefile.am.old  README.md  configure.ac  configure.lineno  control.txt  neuronGM  neuronGM.sublime-workspace
networks/RG/: links.txt  links10.txt
src/: kernel.cc  kernel.h  main.cc  neuronGM-kernel.gcda  neuronGM-kernel.gcno  neuronGM-main.gcda  neuronGM-main.gcno
